src/y.output
Grammar

    0 $accept: Program $end

    1 NUM: UNUM
    2    | SUB UNUM

    3 Program: ProgramElementList

    4 ProgramElementList: ProgramElement ProgramElementList
    5                   | %empty

    6 ProgramElement: VarDeclStmt
    7               | StructDef
    8               | FnDeclStmt
    9               | FnDef
   10               | SEMICOLON

   11 StructDef: STRUCT ID LBRACE VarDeclList RBRACE

   12 Type: INT
   13     | ID

   14 ArithExpr: ArithExpr ADD ArithExpr
   15          | ArithExpr SUB ArithExpr
   16          | ArithExpr MUL ArithExpr
   17          | ArithExpr DIV ArithExpr
   18          | ExprUnit

   19 ExprUnit: NUM
   20         | ID
   21         | LPAREN ArithExpr RPAREN
   22         | FnCall
   23         | LeftVal LBRACKET ID RBRACKET
   24         | LeftVal LBRACKET NUM RBRACKET
   25         | LeftVal DOT ID

   26 BoolExpr: BoolExpr AND BoolExpr
   27         | BoolExpr OR BoolExpr
   28         | BoolUnit

   29 BoolUnit: LPAREN ExprUnit GT ExprUnit RPAREN
   30         | LPAREN ExprUnit LT ExprUnit RPAREN
   31         | LPAREN ExprUnit GE ExprUnit RPAREN
   32         | LPAREN ExprUnit LE ExprUnit RPAREN
   33         | LPAREN ExprUnit EQ ExprUnit RPAREN
   34         | LPAREN ExprUnit NE ExprUnit RPAREN
   35         | LPAREN BoolExpr RPAREN
   36         | NOT BoolUnit

   37 AssignStmt: LeftVal ASS RightVal SEMICOLON

   38 LeftVal: ID
   39        | LeftVal LBRACKET ID RBRACKET
   40        | LeftVal LBRACKET NUM RBRACKET
   41        | LeftVal DOT ID

   42 RightValList: RightVal COMMA RightValList
   43             | RightVal
   44             | %empty

   45 RightVal: ArithExpr
   46         | BoolExpr

   47 FnCall: ID LPAREN RightValList RPAREN

   48 VarDeclStmt: LET VarDecl SEMICOLON
   49            | LET VarDef SEMICOLON

   50 VarDeclList: VarDecl COMMA VarDeclList
   51            | VarDecl
   52            | %empty

   53 VarDecl: ID COLON Type
   54        | ID LBRACKET NUM RBRACKET COLON Type
   55        | ID
   56        | ID LBRACKET NUM RBRACKET

   57 VarDef: ID COLON Type ASS RightVal
   58       | ID ASS RightVal
   59       | ID LBRACKET NUM RBRACKET COLON Type ASS LBRACE RightValList RBRACE
   60       | ID LBRACKET NUM RBRACKET ASS LBRACE RightValList RBRACE

   61 FnDef: FnDecl LBRACE CodeBlockStmtList RBRACE

   62 FnDeclStmt: FnDecl SEMICOLON

   63 ParamDecl: VarDeclList

   64 FnDecl: FN ID LPAREN ParamDecl RPAREN
   65       | FN ID LPAREN ParamDecl RPAREN POINT Type

   66 CodeBlockStmtList: CodeBlockStmt CodeBlockStmtList
   67                  | %empty

   68 CodeBlockStmt: VarDeclStmt
   69              | AssignStmt
   70              | CallStmt
   71              | IfStmt
   72              | WhileStmt
   73              | ReturnStmt
   74              | CONTINUE SEMICOLON
   75              | BREAK SEMICOLON
   76              | SEMICOLON

   77 ReturnStmt: RETURN RightVal SEMICOLON
   78           | RETURN SEMICOLON

   79 CallStmt: FnCall SEMICOLON

   80 IfStmt: IF BoolUnit LBRACE CodeBlockStmtList RBRACE ELSE LBRACE CodeBlockStmtList RBRACE
   81       | IF BoolUnit LBRACE CodeBlockStmtList RBRACE

   82 WhileStmt: WHILE BoolUnit LBRACE CodeBlockStmtList RBRACE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    UNUM <tokenNum> (258) 1 2
    ID <tokenId> (259) 11 13 20 23 25 38 39 41 47 53 54 55 56 57 58 59 60 64 65
    LET <pos> (260) 48 49
    INT <pos> (261) 12
    STRUCT <pos> (262) 11
    FN <pos> (263) 64 65
    RETURN <pos> (264) 77 78
    IF <pos> (265) 80 81
    ELSE <pos> (266) 80
    WHILE <pos> (267) 82
    BREAK <pos> (268) 75
    CONTINUE <pos> (269) 74
    ADD <pos> (270) 14
    SUB <pos> (271) 2 15
    MUL <pos> (272) 16
    DIV <pos> (273) 17
    AND <pos> (274) 26
    OR <pos> (275) 27
    NOT <pos> (276) 36
    GT <pos> (277) 29
    LT <pos> (278) 30
    GE <pos> (279) 31
    LE <pos> (280) 32
    EQ <pos> (281) 33
    NE <pos> (282) 34
    ASS <pos> (283) 37 57 58 59 60
    LPAREN <pos> (284) 21 29 30 31 32 33 34 35 47 64 65
    RPAREN <pos> (285) 21 29 30 31 32 33 34 35 47 64 65
    LBRACKET <pos> (286) 23 24 39 40 54 56 59 60
    RBRACKET <pos> (287) 23 24 39 40 54 56 59 60
    DOT <pos> (288) 25 41
    COMMA <pos> (289) 42 50
    LBRACE <pos> (290) 11 59 60 61 80 81 82
    RBRACE <pos> (291) 11 59 60 61 80 81 82
    COLON <pos> (292) 53 54 57 59
    POINT <pos> (293) 65
    SEMICOLON <pos> (294) 10 37 48 49 62 74 75 76 77 78 79


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    NUM <tokenNum> (41)
        on left: 1 2
        on right: 19 24 40 54 56 59 60
    Program <program> (42)
        on left: 3
        on right: 0
    ProgramElementList <programElementList> (43)
        on left: 4 5
        on right: 3 4
    ProgramElement <programElement> (44)
        on left: 6 7 8 9 10
        on right: 4
    StructDef <structDef> (45)
        on left: 11
        on right: 7
    Type <type> (46)
        on left: 12 13
        on right: 53 54 57 59 65
    ArithExpr <arithExpr> (47)
        on left: 14 15 16 17 18
        on right: 14 15 16 17 21 45
    ExprUnit <exprUnit> (48)
        on left: 19 20 21 22 23 24 25
        on right: 18 29 30 31 32 33 34
    BoolExpr <boolExpr> (49)
        on left: 26 27 28
        on right: 26 27 35 46
    BoolUnit <boolUnit> (50)
        on left: 29 30 31 32 33 34 35 36
        on right: 28 36 80 81 82
    AssignStmt <assignStmt> (51)
        on left: 37
        on right: 69
    LeftVal <leftVal> (52)
        on left: 38 39 40 41
        on right: 23 24 25 37 39 40 41
    RightValList <rightValList> (53)
        on left: 42 43 44
        on right: 42 47 59 60
    RightVal <rightVal> (54)
        on left: 45 46
        on right: 37 42 43 57 58 77
    FnCall <fnCall> (55)
        on left: 47
        on right: 22 79
    VarDeclStmt <varDeclStmt> (56)
        on left: 48 49
        on right: 6 68
    VarDeclList <varDeclList> (57)
        on left: 50 51 52
        on right: 11 50 63
    VarDecl <varDecl> (58)
        on left: 53 54 55 56
        on right: 48 50 51
    VarDef <varDef> (59)
        on left: 57 58 59 60
        on right: 49
    FnDef <fnDef> (60)
        on left: 61
        on right: 9
    FnDeclStmt <fnDeclStmt> (61)
        on left: 62
        on right: 8
    ParamDecl <paramDecl> (62)
        on left: 63
        on right: 64 65
    FnDecl <fnDecl> (63)
        on left: 64 65
        on right: 61 62
    CodeBlockStmtList <codeBlockStmtList> (64)
        on left: 66 67
        on right: 61 66 80 81 82
    CodeBlockStmt <codeBlockStmt> (65)
        on left: 68 69 70 71 72 73 74 75 76
        on right: 66
    ReturnStmt <returnStmt> (66)
        on left: 77 78
        on right: 73
    CallStmt <callStmt> (67)
        on left: 79
        on right: 70
    IfStmt <ifStmt> (68)
        on left: 80 81
        on right: 71
    WhileStmt <whileStmt> (69)
        on left: 82
        on right: 72


State 0

    0 $accept: . Program $end

    LET        shift, and go to state 1
    STRUCT     shift, and go to state 2
    FN         shift, and go to state 3
    SEMICOLON  shift, and go to state 4

    $default  reduce using rule 5 (ProgramElementList)

    Program             go to state 5
    ProgramElementList  go to state 6
    ProgramElement      go to state 7
    StructDef           go to state 8
    VarDeclStmt         go to state 9
    FnDef               go to state 10
    FnDeclStmt          go to state 11
    FnDecl              go to state 12


State 1

   48 VarDeclStmt: LET . VarDecl SEMICOLON
   49            | LET . VarDef SEMICOLON

    ID  shift, and go to state 13

    VarDecl  go to state 14
    VarDef   go to state 15


State 2

   11 StructDef: STRUCT . ID LBRACE VarDeclList RBRACE

    ID  shift, and go to state 16


State 3

   64 FnDecl: FN . ID LPAREN ParamDecl RPAREN
   65       | FN . ID LPAREN ParamDecl RPAREN POINT Type

    ID  shift, and go to state 17


State 4

   10 ProgramElement: SEMICOLON .

    $default  reduce using rule 10 (ProgramElement)


State 5

    0 $accept: Program . $end

    $end  shift, and go to state 18


State 6

    3 Program: ProgramElementList .

    $default  reduce using rule 3 (Program)


State 7

    4 ProgramElementList: ProgramElement . ProgramElementList

    LET        shift, and go to state 1
    STRUCT     shift, and go to state 2
    FN         shift, and go to state 3
    SEMICOLON  shift, and go to state 4

    $default  reduce using rule 5 (ProgramElementList)

    ProgramElementList  go to state 19
    ProgramElement      go to state 7
    StructDef           go to state 8
    VarDeclStmt         go to state 9
    FnDef               go to state 10
    FnDeclStmt          go to state 11
    FnDecl              go to state 12


State 8

    7 ProgramElement: StructDef .

    $default  reduce using rule 7 (ProgramElement)


State 9

    6 ProgramElement: VarDeclStmt .

    $default  reduce using rule 6 (ProgramElement)


State 10

    9 ProgramElement: FnDef .

    $default  reduce using rule 9 (ProgramElement)


State 11

    8 ProgramElement: FnDeclStmt .

    $default  reduce using rule 8 (ProgramElement)


State 12

   61 FnDef: FnDecl . LBRACE CodeBlockStmtList RBRACE
   62 FnDeclStmt: FnDecl . SEMICOLON

    LBRACE     shift, and go to state 20
    SEMICOLON  shift, and go to state 21


State 13

   53 VarDecl: ID . COLON Type
   54        | ID . LBRACKET NUM RBRACKET COLON Type
   55        | ID .
   56        | ID . LBRACKET NUM RBRACKET
   57 VarDef: ID . COLON Type ASS RightVal
   58       | ID . ASS RightVal
   59       | ID . LBRACKET NUM RBRACKET COLON Type ASS LBRACE RightValList RBRACE
   60       | ID . LBRACKET NUM RBRACKET ASS LBRACE RightValList RBRACE

    ASS       shift, and go to state 22
    LBRACKET  shift, and go to state 23
    COLON     shift, and go to state 24

    $default  reduce using rule 55 (VarDecl)


State 14

   48 VarDeclStmt: LET VarDecl . SEMICOLON

    SEMICOLON  shift, and go to state 25


State 15

   49 VarDeclStmt: LET VarDef . SEMICOLON

    SEMICOLON  shift, and go to state 26


State 16

   11 StructDef: STRUCT ID . LBRACE VarDeclList RBRACE

    LBRACE  shift, and go to state 27


State 17

   64 FnDecl: FN ID . LPAREN ParamDecl RPAREN
   65       | FN ID . LPAREN ParamDecl RPAREN POINT Type

    LPAREN  shift, and go to state 28


State 18

    0 $accept: Program $end .

    $default  accept


State 19

    4 ProgramElementList: ProgramElement ProgramElementList .

    $default  reduce using rule 4 (ProgramElementList)


State 20

   61 FnDef: FnDecl LBRACE . CodeBlockStmtList RBRACE

    ID         shift, and go to state 29
    LET        shift, and go to state 1
    RETURN     shift, and go to state 30
    IF         shift, and go to state 31
    WHILE      shift, and go to state 32
    BREAK      shift, and go to state 33
    CONTINUE   shift, and go to state 34
    SEMICOLON  shift, and go to state 35

    $default  reduce using rule 67 (CodeBlockStmtList)

    AssignStmt         go to state 36
    LeftVal            go to state 37
    FnCall             go to state 38
    VarDeclStmt        go to state 39
    CodeBlockStmtList  go to state 40
    CodeBlockStmt      go to state 41
    ReturnStmt         go to state 42
    CallStmt           go to state 43
    IfStmt             go to state 44
    WhileStmt          go to state 45


State 21

   62 FnDeclStmt: FnDecl SEMICOLON .

    $default  reduce using rule 62 (FnDeclStmt)


State 22

   58 VarDef: ID ASS . RightVal

    UNUM    shift, and go to state 46
    ID      shift, and go to state 47
    SUB     shift, and go to state 48
    NOT     shift, and go to state 49
    LPAREN  shift, and go to state 50

    NUM        go to state 51
    ArithExpr  go to state 52
    ExprUnit   go to state 53
    BoolExpr   go to state 54
    BoolUnit   go to state 55
    LeftVal    go to state 56
    RightVal   go to state 57
    FnCall     go to state 58


State 23

   54 VarDecl: ID LBRACKET . NUM RBRACKET COLON Type
   56        | ID LBRACKET . NUM RBRACKET
   59 VarDef: ID LBRACKET . NUM RBRACKET COLON Type ASS LBRACE RightValList RBRACE
   60       | ID LBRACKET . NUM RBRACKET ASS LBRACE RightValList RBRACE

    UNUM  shift, and go to state 46
    SUB   shift, and go to state 48

    NUM  go to state 59


State 24

   53 VarDecl: ID COLON . Type
   57 VarDef: ID COLON . Type ASS RightVal

    ID   shift, and go to state 60
    INT  shift, and go to state 61

    Type  go to state 62


State 25

   48 VarDeclStmt: LET VarDecl SEMICOLON .

    $default  reduce using rule 48 (VarDeclStmt)


State 26

   49 VarDeclStmt: LET VarDef SEMICOLON .

    $default  reduce using rule 49 (VarDeclStmt)


State 27

   11 StructDef: STRUCT ID LBRACE . VarDeclList RBRACE

    ID  shift, and go to state 63

    $default  reduce using rule 52 (VarDeclList)

    VarDeclList  go to state 64
    VarDecl      go to state 65


State 28

   64 FnDecl: FN ID LPAREN . ParamDecl RPAREN
   65       | FN ID LPAREN . ParamDecl RPAREN POINT Type

    ID  shift, and go to state 63

    $default  reduce using rule 52 (VarDeclList)

    VarDeclList  go to state 66
    VarDecl      go to state 65
    ParamDecl    go to state 67


State 29

   38 LeftVal: ID .
   47 FnCall: ID . LPAREN RightValList RPAREN

    LPAREN  shift, and go to state 68

    $default  reduce using rule 38 (LeftVal)


State 30

   77 ReturnStmt: RETURN . RightVal SEMICOLON
   78           | RETURN . SEMICOLON

    UNUM       shift, and go to state 46
    ID         shift, and go to state 47
    SUB        shift, and go to state 48
    NOT        shift, and go to state 49
    LPAREN     shift, and go to state 50
    SEMICOLON  shift, and go to state 69

    NUM        go to state 51
    ArithExpr  go to state 52
    ExprUnit   go to state 53
    BoolExpr   go to state 54
    BoolUnit   go to state 55
    LeftVal    go to state 56
    RightVal   go to state 70
    FnCall     go to state 58


State 31

   80 IfStmt: IF . BoolUnit LBRACE CodeBlockStmtList RBRACE ELSE LBRACE CodeBlockStmtList RBRACE
   81       | IF . BoolUnit LBRACE CodeBlockStmtList RBRACE

    NOT     shift, and go to state 49
    LPAREN  shift, and go to state 71

    BoolUnit  go to state 72


State 32

   82 WhileStmt: WHILE . BoolUnit LBRACE CodeBlockStmtList RBRACE

    NOT     shift, and go to state 49
    LPAREN  shift, and go to state 71

    BoolUnit  go to state 73


State 33

   75 CodeBlockStmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 34

   74 CodeBlockStmt: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 75


State 35

   76 CodeBlockStmt: SEMICOLON .

    $default  reduce using rule 76 (CodeBlockStmt)


State 36

   69 CodeBlockStmt: AssignStmt .

    $default  reduce using rule 69 (CodeBlockStmt)


State 37

   37 AssignStmt: LeftVal . ASS RightVal SEMICOLON
   39 LeftVal: LeftVal . LBRACKET ID RBRACKET
   40        | LeftVal . LBRACKET NUM RBRACKET
   41        | LeftVal . DOT ID

    ASS       shift, and go to state 76
    LBRACKET  shift, and go to state 77
    DOT       shift, and go to state 78


State 38

   79 CallStmt: FnCall . SEMICOLON

    SEMICOLON  shift, and go to state 79


State 39

   68 CodeBlockStmt: VarDeclStmt .

    $default  reduce using rule 68 (CodeBlockStmt)


State 40

   61 FnDef: FnDecl LBRACE CodeBlockStmtList . RBRACE

    RBRACE  shift, and go to state 80


State 41

   66 CodeBlockStmtList: CodeBlockStmt . CodeBlockStmtList

    ID         shift, and go to state 29
    LET        shift, and go to state 1
    RETURN     shift, and go to state 30
    IF         shift, and go to state 31
    WHILE      shift, and go to state 32
    BREAK      shift, and go to state 33
    CONTINUE   shift, and go to state 34
    SEMICOLON  shift, and go to state 35

    $default  reduce using rule 67 (CodeBlockStmtList)
